# memes2

./: .gitignore  .gitmodules  Cargo.toml  README.md  fizzbuzz.py  masked.py  pyproject.toml  stuff.md  test.py
configs/: test.json
misc/: c4-download.sh
model/: c4_loader.py  common.py  infer.py  main.py  masking.py  model.py  native.py  native_loader.py  pile_loader.py  rotary_encoding.py  train.py  train_masked.py  train_utils.py  util.py
model-native/: Cargo.toml
model-native/src/: lib.rs
